--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ input:focus {
     box-shadow: none !important;
 }
 
+.change-color {
+    fill: #fff;
+}
+
 img {
     width: 100%;
 }
@@ -73,7 +77,7 @@ section.banner-section {
     font-family: sans-serif;
     font-size: 30px;
     font-weight: 100;
-    max-width: 50%;
+    max-width: 66%;
     padding: 30px 0;
 }
 
@@ -185,7 +189,7 @@ section.service-section {
 /* technology section  */
 
 /* numbers section  */
-.col.text-center.number-box h4 {
+.number-box h4 {
     font-size: 45px;
     color: #333;
 }
